--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a href="#" class="nav-link"><i class="info-icon"></i>Information</a>
       <a href="#" class="nav-link"><i class="bell-icon"></i>Notifications</a>
     </nav>
-    <div class="container">
+    <main>
       <div class="box nearest-car-box">
         <header class="nearest-car-header">
           <h4>Nearest Car</h4>
@@ -80,6 +80,6 @@
           </div>
         </div>
       </div>
-    </div>
+    </main>
   </body>
 </html>
